adding excel read

--- a/test-output/old/TestRunnerSuite/classes.html
+++ b/test-output/old/TestRunnerSuite/classes.html
@@ -4,26 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.ManageProductTestCases</td>
+<td>testCases.LoginTestCases</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateStylePropertyOfSaveButton</td>
+<td>loggedInProfileNameValidationUsingDataProvider</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateVegIsSelectedByDefault</td>
+<td>validationOfRememberMeCheckbox</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateUploadedFileIsPreviewDisplayed</td>
+<td>loggedInProfileNameValidation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateStockIsYesByDefault</td>
+<td>excelRead</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>profileNameStyleValidation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
