--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">TestRunnerSuite</th></tr>
-<tr><td><a href="#t0">MyFirstTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,882</td><td></td><td></td></tr>
+<tr><td><a href="#t0">MyFirstTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,624</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">TestRunnerSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">MyFirstTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.ManageProductTestCases</td><td><a href="#m0">validateUploadedFileIsPreviewDisplayed</a></td><td rowspan="1">1671689396980</td><td rowspan="1">7849</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">TestRunnerSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">MyFirstTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.LoginTestCases</td><td><a href="#m0">excelRead</a></td><td rowspan="1">1671718346227</td><td rowspan="1">2104</td></tr></tbody>
 </table>
-<h2>MyFirstTest</h2><h3 id="m0">testCases.ManageProductTestCases#validateUploadedFileIsPreviewDisplayed</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>MyFirstTest</h2><h3 id="m0">testCases.LoginTestCases#excelRead</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
