--- a/test-output/old/TestRunnerSuite/methods-not-run.html
+++ b/test-output/old/TestRunnerSuite/methods-not-run.html
@@ -1,5 +1,6 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>testCases.ManageProductTestCases.validateStockIsYesByDefault<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether yes button is selected by default for stock</i></td></tr>
-<tr><td>testCases.ManageProductTestCases.validateStylePropertyOfSaveButton<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the font color of save button</i></td></tr>
-<tr><td>testCases.ManageProductTestCases.validateVegIsSelectedByDefault<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether veg is selected by default</i></td></tr>
+<tr><td>testCases.LoginTestCases.loggedInProfileNameValidation<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the profile name of logged user</i></td></tr>
+<tr><td>testCases.LoginTestCases.loggedInProfileNameValidationUsingDataProvider<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>login using data provider</i></td></tr>
+<tr><td>testCases.LoginTestCases.validationOfRememberMeCheckbox<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether remember checkbox is unchecked</i></td></tr>
+<tr><td>testCases.LoginTestCases.profileNameStyleValidation<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating color property of profile name</i></td></tr>
 </table>
