--- a/test-output/old/TestRunnerSuite/methods.html
+++ b/test-output/old/TestRunnerSuite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestRunnerSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="64f761">  <td>22/12/22 11:39:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageProductTestCases.validateUploadedFileIsPreviewDisplayed()[pri:4, instance:testCases.ManageProductTestCases@595b007d]">validateUploadedFileIsPreviewDisplayed</td> 
+<tr bgcolor="91d69f">  <td>22/12/22 19:42:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.LoginTestCases@6069db50]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="91d69f">  <td>22/12/22 19:42:22</td>   <td>-5390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.LoginTestCases@6069db50]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="9e7ee8">  <td>22/12/22 19:42:26</td>   <td>-2112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCases.excelRead()[pri:0, instance:testCases.LoginTestCases@6069db50]">excelRead</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="a6ba85">  <td>22/12/22 11:40:04</td>   <td>7859</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageProductTestCases@595b007d]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="a6ba85">  <td>22/12/22 11:39:51</td>   <td>-5648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageProductTestCases@595b007d]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
 </table>
