--- a/test-output/old/TestRunnerSuite/methods-alphabetical.html
+++ b/test-output/old/TestRunnerSuite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestRunnerSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="91d69f">  <td>22/12/25 12:28:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.LoginTestCases@6069db50]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="e9b5a8">  <td>22/12/25 17:19:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageExpenseTestCases@16293aa2]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>22/12/25 12:27:58</td>   <td>-4699</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.LoginTestCases@6069db50]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="e9b5a8">  <td>22/12/25 17:19:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageExpenseTestCases@16293aa2]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="9e7ee8">  <td>22/12/25 12:28:01</td>   <td>-1517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCases.excelRead()[pri:0, instance:testCases.LoginTestCases@6069db50]">excelRead</td> 
+<tr bgcolor="e9b5a8">  <td>22/12/25 17:19:09</td>   <td>-4021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageExpenseTestCases@16293aa2]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="e9b5a8">  <td>22/12/25 17:19:09</td>   <td>-4021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageExpenseTestCases@16293aa2]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>22/12/25 17:19:03</td>   <td>-9848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageExpenseTestCases.validatingTheProductTitleAlreadyExists()[pri:1, instance:testCases.ManageExpenseTestCases@16293aa2]">validatingTheProductTitleAlreadyExists</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>22/12/25 17:19:11</td>   <td>-1822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageExpenseTestCases.validatingTheProductTitleName()[pri:2, instance:testCases.ManageExpenseTestCases@16293aa2]">validatingTheProductTitleName</td> 
   <td>main@1510467688</td>   <td></td> </tr>
 </table>
