--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">TestRunnerSuite</th></tr>
-<tr><td><a href="#t0">MyFirstTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12,724</td><td></td><td></td></tr>
+<tr><td><a href="#t0">MyFirstTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27,447</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">TestRunnerSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">MyFirstTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testCases.ManageExpenseTestCases</td><td><a href="#m0">validatingTheProductTitleAlreadyExists</a></td><td rowspan="1">1671968943200</td><td rowspan="1">5593</td></tr><tr class="passedeven"><td><a href="#m1">validatingTheProductTitleName</a></td><td rowspan="1">1671968951226</td><td rowspan="1">1814</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">TestRunnerSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">MyFirstTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testCases.AdminUsersTestCases</td><td><a href="#m0">validateAdminProfileAlreadyExists</a></td><td rowspan="1">1672166993770</td><td rowspan="1">2235</td></tr><tr class="passedeven"><td><a href="#m1">validateAdminProfileWithFaker</a></td><td rowspan="1">1672166988292</td><td rowspan="1">3250</td></tr></tbody>
 </table>
-<h2>MyFirstTest</h2><h3 id="m0">testCases.ManageExpenseTestCases#validatingTheProductTitleAlreadyExists</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testCases.ManageExpenseTestCases#validatingTheProductTitleName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>MyFirstTest</h2><h3 id="m0">testCases.AdminUsersTestCases#validateAdminProfileAlreadyExists</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.AdminUsersTestCases#validateAdminProfileWithFaker</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
