--- a/test-output/old/TestRunnerSuite/classes.html
+++ b/test-output/old/TestRunnerSuite/classes.html
@@ -4,18 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.ManageExpenseTestCases</td>
+<td>testCases.AdminUsersTestCases</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validatingTheProductTitleAlreadyExists</td>
+<td>validateAdminProfileWithFaker</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validatingTheProductTitleName</td>
+<td>validateAdminProfileAlreadyExists</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
