--- a/test-output/old/TestRunnerSuite/methods-alphabetical.html
+++ b/test-output/old/TestRunnerSuite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>TestRunnerSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e9b5a8">  <td>22/12/25 17:19:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageExpenseTestCases@16293aa2]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="e98f8f">  <td>22/12/28 00:19:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.AdminUsersTestCases@1283bb96]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="e9b5a8">  <td>22/12/25 17:19:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.ManageExpenseTestCases@16293aa2]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="e98f8f">  <td>22/12/28 00:19:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.AdminUsersTestCases@1283bb96]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="e9b5a8">  <td>22/12/25 17:19:09</td>   <td>-4021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageExpenseTestCases@16293aa2]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="e98f8f">  <td>22/12/28 00:19:51</td>   <td>-4336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.AdminUsersTestCases@1283bb96]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="e9b5a8">  <td>22/12/25 17:19:09</td>   <td>-4021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.ManageExpenseTestCases@16293aa2]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="e98f8f">  <td>22/12/28 00:19:51</td>   <td>-4336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod(java.lang.String)[pri:0, instance:testCases.AdminUsersTestCases@1283bb96]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="76e6b0">  <td>22/12/25 17:19:03</td>   <td>-9848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageExpenseTestCases.validatingTheProductTitleAlreadyExists()[pri:1, instance:testCases.ManageExpenseTestCases@16293aa2]">validatingTheProductTitleAlreadyExists</td> 
+<tr bgcolor="efe5e5">  <td>22/12/28 00:19:53</td>   <td>-2235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminUsersTestCases.validateAdminProfileAlreadyExists()[pri:2, instance:testCases.AdminUsersTestCases@1283bb96]">validateAdminProfileAlreadyExists</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="76e6b0">  <td>22/12/25 17:19:11</td>   <td>-1822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageExpenseTestCases.validatingTheProductTitleName()[pri:2, instance:testCases.ManageExpenseTestCases@16293aa2]">validatingTheProductTitleName</td> 
+<tr bgcolor="efe5e5">  <td>22/12/28 00:19:48</td>   <td>-7713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminUsersTestCases.validateAdminProfileWithFaker()[pri:1, instance:testCases.AdminUsersTestCases@1283bb96]">validateAdminProfileWithFaker</td> 
   <td>main@1510467688</td>   <td></td> </tr>
 </table>
