extent report added

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">TestRunnerSuite</th></tr>
-<tr><td><a href="#t0">MyFirstTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27,447</td><td></td><td></td></tr>
+<tr><th colspan="8">My Extent Report Suite</th></tr>
+<tr><td><a href="#t0">My Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19,422</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">TestRunnerSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">MyFirstTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testCases.AdminUsersTestCases</td><td><a href="#m0">validateAdminProfileAlreadyExists</a></td><td rowspan="1">1672166993770</td><td rowspan="1">2235</td></tr><tr class="passedeven"><td><a href="#m1">validateAdminProfileWithFaker</a></td><td rowspan="1">1672166988292</td><td rowspan="1">3250</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">My Extent Report Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">My Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">testCases.MobileSliderTestCases</td><td><a href="#m0">validateImageDisplay</a></td><td rowspan="1">1672207733923</td><td rowspan="1">1866</td></tr><tr class="passedeven"><td><a href="#m1">validateStatusOfFirstImage</a></td><td rowspan="1">1672207738307</td><td rowspan="1">2069</td></tr><tr class="passedeven"><td><a href="#m2">validateTitleOfThePage</a></td><td rowspan="1">1672207728129</td><td rowspan="1">2956</td></tr></tbody>
 </table>
-<h2>MyFirstTest</h2><h3 id="m0">testCases.AdminUsersTestCases#validateAdminProfileAlreadyExists</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testCases.AdminUsersTestCases#validateAdminProfileWithFaker</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>My Test</h2><h3 id="m0">testCases.MobileSliderTestCases#validateImageDisplay</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.MobileSliderTestCases#validateStatusOfFirstImage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testCases.MobileSliderTestCases#validateTitleOfThePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
