--- a/test-output/old/My Extent Report Suite/classes.html
+++ b/test-output/old/My Extent Report Suite/classes.html
@@ -4,18 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.ManageExpenseTestCases</td>
+<td>testCases.MobileSliderTestCases</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validatingTheProductTitleAlreadyExists</td>
+<td>validateStatusOfFirstImage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validatingTheProductTitleName</td>
+<td>validateImageDisplay</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateTitleOfThePage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
