--- a/test-output/old/TestRunnerSuite/methods-not-run.html
+++ b/test-output/old/TestRunnerSuite/methods-not-run.html
@@ -1,2 +1,3 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>testCases.ManageExpenseTestCases.validatingTheProductTitleName<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the title of third product</i></td></tr>
 </table>
