--- a/test-output/old/TestRunnerSuite/classes.html
+++ b/test-output/old/TestRunnerSuite/classes.html
@@ -4,18 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.ManageExpenseTestCases</td>
+<td>testCases.ManageOrdersTestCases</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validatingTheProductTitleAlreadyExists</td>
+<td>validatePaymentModeIsBank</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validatingTheProductTitleName</td>
+<td>validateSizeOfStatusDropdown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateDeletionOfProductOrder</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateOrderIdAndPaymentMode</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
