--- a/test-output/old/TestRunnerSuite/methods-not-run.html
+++ b/test-output/old/TestRunnerSuite/methods-not-run.html
@@ -1,3 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>testCases.ManageExpenseTestCases.validatingTheProductTitleName<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating the title of third product</i></td></tr>
+<tr><td>testCases.ManageOrdersTestCases.validatePaymentModeIsBank<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether the payment mode is bank itself while selecting bank from dropdown</i></td></tr>
+<tr><td>testCases.ManageOrdersTestCases.validateSizeOfStatusDropdown<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating size of the status dropdown</i></td></tr>
+<tr><td>testCases.ManageOrdersTestCases.validateDeletionOfProductOrder<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validating whether the delete action is successfully performed</i></td></tr>
 </table>
