--- a/test-output/old/TestRunnerSuite/classes.html
+++ b/test-output/old/TestRunnerSuite/classes.html
@@ -4,19 +4,27 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.ManageLocationTestCases</td>
+<td>testCases.ManageOrdersTestCases</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateCountOfActiveStatus</td>
-<td>Sanity test </td>
+<td>validatePaymentModeIsBank</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateSizeOfStatusDropdown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateDeletionOfProductOrder</td>
+<td>Regression test </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateStateNameFromDropdown</td>
+<td>validateOrderIdAndPaymentMode</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
